--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           working-dir: .
           output-file: README.md
-          fail-on-diff: true
+          output-method: replace
+          git-push: "true"
   format:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
